# wasm-image-optimization

./: .eslintrc.json  .gitignore  .npmignore  .prettierrc  CMakeLists.txt  GEMINI.md  LICENSE  Makefile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.csj.json  tsconfig.esm.json  tsconfig.json  typings.d.ts  vcpkg.json
.github/workflows/: build-wasm.yml  deploy.yml
doc/: image.avif
docker/: .dockerignore  Dockerfile  Dockerfile.wasm  docker-compose.yml
scripts/: build-wasm.ts  format.ts  wasm-docker-build.ts
src/: libImage.cpp
src/cjs/: index.ts  libImage.d.ts
src/cpp/: libImage.cpp  main.cpp
src/cpp/api/: image_converter_api.cpp  image_converter_api.h
src/cpp/bridge/: bridge_types.h
src/cpp/core/: image_converter_context.cpp  image_converter_context.h
src/cpp/libs/: Image.cpp  Image.h  MemoryManager.cpp  MemoryManager.h  MemoryRW.cpp  MemoryRW.h  Surface.h  ThumbHash.cpp  ThumbHash.h
src/cpp/libs/skia/: SkUserConfig.h  wuffs_implementation.cpp
src/cpp/utils/: logging.h  lru_cache.h  skia_stubs.cpp  skia_utils.cpp  skia_utils.h  thumbhash.cpp  thumbhash.h
src/dummy/: index.ts
src/esm/: _worker.ts  esm-worker.ts  index.ts  libImage.d.ts
src/lib/: optimizeImage.ts
src/next/: index.ts
src/next-web-worker/: _web-worker.ts  index.ts
src/node/: _node-worker.ts  cjs-worker.ts  index.ts
src/types/: index.ts
src/vite/: dummy.ts  index.ts
src/vite-plugin/: index.ts
src/vite-web-worker/: _web-worker.ts  index.ts
src/web-worker/: _web-worker.ts  index.ts
src/webworker/: index.ts  worker.ts
src/workers/: index.ts  libImage.d.ts
test/: index.js  index.ts  tsconfig.json
triplets/: wasm32-emscripten-wasm-eh.cmake
